[package]
name = "env-edit"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
ratatui = "0.29.0"
tracing = "0.1.41"
windows = { version = "0.60.0", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
