[package]
name = "env-edit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.14.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
windows = { version = "0.60.0", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }
